Fix persona login button alignment.

--- a/static/styles/layout.css
+++ b/static/styles/layout.css
@@ -1,3 +1,8 @@
 body {
   padding-top: 40px;
 }
+
+.navbar-persona {
+  line-height: normal;
+  padding-top: 7px;
+}
