--- a/static/styles/persona-buttons.css
+++ b/static/styles/persona-buttons.css
@@ -32,6 +32,8 @@
 }
 
 .persona-button:hover{
+  color: #fff;
+
   background: #21669f;
   background: -moz-linear-gradient(top, #3788b9, #21669f);
   background: -ms-linear-gradient(top, #3788b9, #21669f);
@@ -41,6 +43,8 @@
 }
 
 .persona-button:active, .persona-button:focus{
+  color: #fff;
+
   top: 1px;
   -moz-box-shadow:   none;
   -ms-box-shadow:   none;
